js/js.translator/testData/incremental/invalidation/inlineFunctionCircleUsage/lib1/l1a.0.kt
inline fun funA(flag: Boolean = true): Int {
    if (flag) {
        return funB()
    }
    return 2
}
